--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,58 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "schlau.app",
+  "short_name" : "schlau.app",
+  "start_url": "/",
+  "scope" : "./",
+  "prefer_related_applications": false,
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+      {
+          "src": "maskable_icon.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "any maskable"
+      },
+      {
+          "src": "icons_/icon72.png",
+          "sizes": "72x72",
+          "type": "image/png"
+      },
+      {
+          "src": "icons_/icon96.png",
+          "sizes": "96x96",
+          "type": "image/png"
+      },
+      {
+          "src": "icons_/icon128.png",
+          "sizes": "128x128",
+          "type": "image/png"
+      },
+      {
+          "src": "icons_/icon144.png",
+          "sizes": "144x144",
+          "type": "image/png"
+      },
+      {
+          "src": "icons_/icon152.png",
+          "sizes": "152x152",
+          "type": "image/png"
+      },
+      {
+          "src": "icons_/icon192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "icons_/icon384.png",
+          "sizes": "384x384",
+          "type": "image/png"
+      },
+      {
+          "src": "icons_/icon512.png",
+          "sizes": "512x512",
+          "type": "image/png"
+      }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#0040FF",
+  "background_color": "#0040FF",
+  "display": "standalone"
 }
